--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 
 * {
     font-family: 'Sora', sans-serif;
-    box-sizing: border-box;    
-    margin: 0;
-    padding: 0;
 }
+
+.submit-form {
+    max-width: 150px;
+    margin: auto;
+  }
